--- a/burger-builder/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/burger-builder/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -3,7 +3,10 @@
     box-sizing: border-box;
     display: block;
     width: 100%;
+    list-style: none;
+  
   }
+  
   
   .NavigationItem a {
     color: #8F5C2C;
