--- a/burger-builder/src/containers/Auth/Auth.css
+++ b/burger-builder/src/containers/Auth/Auth.css
@@ -6,6 +6,7 @@
     border: 1px solid #eee;
     padding: 10px;
     box-sizing: border-box;
+    margin-top: 100px;
   }
   
   @media (min-width: 600px){
