--- a/nodejs-client/src/Home/Home.css
+++ b/nodejs-client/src/Home/Home.css
@@ -4,4 +4,19 @@
     padding: 30px;
     margin: 20px;
     display: inline-block;
+    background: transparent;
+    box-shadow: 1px 1px 3px 3px #000 !important;
+    z-index: 999;
+}
+
+.Home {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    background-image: url('../asserts/weather.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
