--- a/nodejs-client/src/Home/Home.css
+++ b/nodejs-client/src/Home/Home.css
@@ -1,26 +1,57 @@
 .Home .MuiCard-root {
     height:auto;
-    width: 600px;
+    width: 500px;
     padding: 30px;
     margin: 20px;
     display: inline-block;
-    background: transparent;
-    box-shadow: 1px 1px 3px 3px #000 !important;
-    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px #000 !important;
+    color:whitesmoke;
 }
 
 .Home {
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     margin: 0;
     padding: 0;
-    background-image: url('../asserts/weather.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
+    background: url('../asserts/sea-summer.jpg') no-repeat center center fixed;
+    background-size: 100% 100%;
+    content: '';
+    min-width: 100%;
+    min-height: 100%;
     text-align: center;
+    z-index: -1;
+    display: block;
+    color:whitesmoke;
 }
 
 .Home form{
     display: inline-block;
+}
+
+.Home a{
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+.Home a:hover{
+    color: #f0c420;
+}
+
+.Home .MuiInput-underline:after {
+    border-bottom: 2px solid whitesmoke;
+}
+
+.Home .MuiFormControl-root .Mui-focused {
+    color: whitesmoke;
+}
+
+.Home .MuiButton-outlined{
+    color: whitesmoke;
+    border: 1px solid whitesmoke !important;
+}
+.Home .MuiButton-outlined:hover{
+    border: 1px solid #f0c420 !important;
+    color: #f0c420;
 }
